# twitbooks

./: .gitignore  README.md  pyproject.toml
tests/: test_sync.py  test_twitbooks.py
twitbooks/: config.py  console.py  ner.py  renderer.py  sync.py  twitter.py
twitbooks/book/: api.py
twitbooks/cli/: main.py
